--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
           <em><strong><a target="_blank" href="https://www.google.de/">Godfather of stuff</a></strong></em>
         </p>
         <p>
-          BIO!!!!!!!!!!!!!!asdasdasldfjkhaskdjfhkljahsldkjfhalkjsdhflkjah
+          BIO!!!!!!!!!!!!!!
         </p></td>
     </tr>
   </table>
