--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <li>drei</li>
   </ol>
   <hr>
-  <a target="_blank" href="Kontakt.html">RUF MICH AN</a>
+  <a target="_blank" href="kontakt.html">RUF MICH AN</a>
   <hr>
   <table>
     <thead >
