--- a/kontakt.html
+++ b/kontakt.html
@@ -5,8 +5,14 @@
     <title>Kontakt</title>
   </head>
   <body>
-    <h3>My Name: Parcel Kopplin</h3>
-    <h3>Adresse</h3>
-    <p>Stadt</p>
+    <form action="mailto:pavel@kaplin.de" method="POST" enctype="text/plain">
+      <label>Your Name:</label>
+      <input type="text" name="yourname" value=""><br>
+      <label>Your Email:</label>
+      <input type="email" name="youremail" value=""><br>
+      <label>Your Message: </label><br>
+      <textarea name="yourmessage" id="" cols="30" rows="10"></textarea><br>
+      <input type="submit" name="" id="">
+    </form>
   </body>
 </html>
