--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
   <title>Pavel´s Seite</title>
 </head>
 
-<body>
+<body style="background-color:#A6E3E9">
   <table cellspacing="20">
     <tr>
-      <td><img height="300" width="300" src="images\1.jpg" alt="Jens Spast"></td>
+      <td><img height="300" width="300" src="images\1.png" alt="Jens Spast"></td>
       <td><h1>Pavel Kaplin</h1>
         <p>
           <em><strong><a target="_blank" href="https://www.google.de/">Godfather of stuff</a></strong></em>
