--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Pavel´s Seite</title>
 </head>
 
-<body style="background-color:#A6E3E9">
+<body style="background-color:cornflowerblue">
   <table cellspacing="20">
     <tr>
       <td><img height="300" width="300" src="images\1.png" alt="Jens Spast"></td>
