--- a/index.html
+++ b/index.html
@@ -4,9 +4,20 @@
 <head>
   <meta charset="utf-8">
   <title>Pavel´s Seite</title>
+
+  <style>
+
+    body {
+
+      background-color:cornflowerblue;
+      
+      }
+
+  </style>
+
 </head>
 
-<body style="background-color:cornflowerblue">
+<body>
   <table cellspacing="20">
     <tr>
       <td><img height="300" width="300" src="images\1.png" alt="Jens Spast"></td>
