--- a/index.html
+++ b/index.html
@@ -8,10 +8,19 @@
   <style>
 
     body {
-
-      background-color:cornflowerblue;
-      
+      background-color:#EAEAEA;
       }
+    hr {
+      border-style: none;
+      border-top: dotted;
+      border-color: grey;
+      border-width: 5px;
+      width: 5%;
+    }
+
+    img {
+      height: 300px;
+    }
 
   </style>
 
