--- a/index.html
+++ b/index.html
@@ -4,26 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>Pavel´s Seite</title>
-
-  <style>
-
-    body {
-      background-color:#EAEAEA;
-      }
-    hr {
-      border-style: none;
-      border-top: dotted;
-      border-color: grey;
-      border-width: 5px;
-      width: 5%;
-    }
-
-    img {
-      height: 300px;
-    }
-
-  </style>
-
+  <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
